@@ -1,6 +1,6 @@
 //
 //  ========================================================================
-//  Copyright (c) 1995-2017 Mort Bay Consulting Pty. Ltd.
+//  Copyright (c) 1995-2021 Mort Bay Consulting Pty Ltd and others.
 //  ------------------------------------------------------------------------
 //  All rights reserved. This program and the accompanying materials
 //  are made available under the terms of the Eclipse Public License v1.0
@@ -21,7 +21,6 @@ package org.eclipse.jetty.jaas.spi;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.util.Map;
-
 import javax.security.auth.Subject;
 import javax.security.auth.callback.CallbackHandler;
 
@@ -29,7 +28,7 @@ import org.eclipse.jetty.util.Loader;
 import org.eclipse.jetty.util.log.Log;
 import org.eclipse.jetty.util.log.Logger;
 
-/** 
+/**
  * JDBCLoginModule
  * <p>
  * JAAS LoginModule to retrieve user information from
@@ -49,42 +48,41 @@ public class JDBCLoginModule extends AbstractDatabaseLoginModule
 
     /**
      * Get a connection from the DriverManager
-     * @see AbstractDatabaseLoginModule#getConnection()
+     *
      * @return the connection for this datasource
      * @throws Exception if unable to get the connection
+     * @see AbstractDatabaseLoginModule#getConnection()
      */
-    public Connection getConnection ()
-    throws Exception
+    @Override
+    public Connection getConnection()
+        throws Exception
     {
-        if (!((dbDriver != null)
-                &&
-                (dbUrl != null)))
-            throw new IllegalStateException ("Database connection information not configured");
+        if (!((dbDriver != null) && (dbUrl != null)))
+            throw new IllegalStateException("Database connection information not configured");
 
-        if(LOG.isDebugEnabled())LOG.debug("Connecting using dbDriver="+dbDriver+"+ dbUserName="+dbUserName+", dbPassword="+dbUrl);
+        if (LOG.isDebugEnabled())
+            LOG.debug("Connecting using dbDriver=" + dbDriver + "+ dbUserName=" + dbUserName + ", dbPassword=" + dbUrl);
 
-        return DriverManager.getConnection (dbUrl,
-                dbUserName,
-                dbPassword);
+        return DriverManager.getConnection(dbUrl,
+            dbUserName,
+            dbPassword);
     }
 
-
-
-    /* ------------------------------------------------ */
-    /** 
+    /**
      * Init LoginModule.
      * <p>
      * Called once by JAAS after new instance created.
-     * 
+     *
      * @param subject the subject
      * @param callbackHandler the callback handler
      * @param sharedState the shared state map
      * @param options the options map
      */
+    @Override
     public void initialize(Subject subject,
                            CallbackHandler callbackHandler,
-                           Map<String,?> sharedState,
-                           Map<String,?> options)
+                           Map<String, ?> sharedState,
+                           Map<String, ?> options)
     {
         try
         {
@@ -103,19 +101,11 @@ public class JDBCLoginModule extends AbstractDatabaseLoginModule
                 dbPassword = "";
 
             if (dbDriver != null)
-                Loader.loadClass(dbDriver).newInstance();
+                Loader.loadClass(dbDriver).getDeclaredConstructor().newInstance();
         }
-        catch (ClassNotFoundException e)
+        catch (Exception e)
         {
-            throw new IllegalStateException (e.toString());
-        }
-        catch (InstantiationException e)
-        {
-            throw new IllegalStateException (e.toString());
-        }
-        catch (IllegalAccessException e)
-        {
-            throw new IllegalStateException (e.toString());
+            throw new IllegalStateException(e.toString());
         }
     }
 }
