@@ -1,6 +1,6 @@
 //
 //  ========================================================================
-//  Copyright (c) 1995-2017 Mort Bay Consulting Pty. Ltd.
+//  Copyright (c) 1995-2021 Mort Bay Consulting Pty Ltd and others.
 //  ------------------------------------------------------------------------
 //  All rights reserved. This program and the accompanying materials
 //  are made available under the terms of the Eclipse Public License v1.0
@@ -24,7 +24,7 @@ import java.util.Random;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
-
+import java.util.stream.Stream;
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
@@ -42,26 +42,26 @@ import org.eclipse.jetty.server.ServerConnector;
 import org.eclipse.jetty.servlet.ServletContextHandler;
 import org.eclipse.jetty.servlet.ServletHolder;
 import org.eclipse.jetty.util.IO;
+import org.eclipse.jetty.util.ProcessorUtils;
 import org.eclipse.jetty.util.log.Log;
 import org.eclipse.jetty.util.log.Logger;
 import org.eclipse.jetty.util.thread.QueuedThreadPool;
-import org.junit.After;
-import org.junit.Assert;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
-@RunWith(Parameterized.class)
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
 public class ProxyServletLoadTest
 {
-    @Parameterized.Parameters(name = "{0}")
-    public static Iterable<Object[]> data()
+    public static Stream<Arguments> data()
     {
-        return Arrays.asList(new Object[][]{
-                {ProxyServlet.class},
-                {AsyncProxyServlet.class},
-                {AsyncMiddleManServlet.class}
-        });
+        return Arrays.asList(
+            ProxyServlet.class,
+            AsyncProxyServlet.class,
+            AsyncMiddleManServlet.class)
+            .stream().map(Arguments::of);
     }
 
     private static final Logger LOG = Log.getLogger(ProxyServletLoadTest.class);
@@ -74,13 +74,10 @@ public class ProxyServletLoadTest
     private Server server;
     private ServerConnector serverConnector;
 
-    public ProxyServletLoadTest(Class<?> proxyServletClass) throws Exception
+    private void startServer(Class<? extends AbstractProxyServlet> proxyServletClass, HttpServlet servlet) throws Exception
     {
-        proxyServlet = (AbstractProxyServlet)proxyServletClass.newInstance();
-    }
+        proxyServlet = proxyServletClass.getDeclaredConstructor().newInstance();
 
-    private void startServer(HttpServlet servlet) throws Exception
-    {
         QueuedThreadPool serverPool = new QueuedThreadPool();
         serverPool.setName("server");
         server = new Server(serverPool);
@@ -124,7 +121,7 @@ public class ProxyServletLoadTest
         client = result;
     }
 
-    @After
+    @AfterEach
     public void dispose() throws Exception
     {
         client.stop();
@@ -132,10 +129,11 @@ public class ProxyServletLoadTest
         server.stop();
     }
 
-    @Test
-    public void test() throws Exception
+    @ParameterizedTest
+    @MethodSource("data")
+    public void test(Class<? extends AbstractProxyServlet> proxyServletClass) throws Exception
     {
-        startServer(new HttpServlet()
+        startServer(proxyServletClass, new HttpServlet()
         {
             @Override
             protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException
@@ -149,7 +147,7 @@ public class ProxyServletLoadTest
         startClient();
 
         // Number of clients to simulate
-        int clientCount = Runtime.getRuntime().availableProcessors();
+        int clientCount = ProcessorUtils.availableProcessors();
 
         // Latch for number of clients still active (used to terminate test)
         final CountDownLatch activeClientLatch = new CountDownLatch(clientCount);
@@ -171,8 +169,8 @@ public class ProxyServletLoadTest
             thread.start();
         }
 
-        Assert.assertTrue(activeClientLatch.await(Math.max(clientCount * iterations * 10, 5000), TimeUnit.MILLISECONDS));
-        Assert.assertTrue(success.get());
+        assertTrue(activeClientLatch.await(Math.max(clientCount * iterations * 10, 5000), TimeUnit.MILLISECONDS));
+        assertTrue(success.get());
     }
 
     private static class ClientLoop implements Runnable
@@ -208,11 +206,11 @@ public class ProxyServletLoadTest
                     byte[] content = new byte[1024];
                     new Random().nextBytes(content);
                     ContentResponse response = client.newRequest(host, port).method(HttpMethod.POST).content(new BytesContentProvider(content))
-                            .timeout(5, TimeUnit.SECONDS).send();
+                        .timeout(5, TimeUnit.SECONDS).send();
 
                     if (response.getStatus() != 200)
                     {
-                        LOG.warn("Got response <{}>, expecting <{}> iteration=", response.getStatus(), 200,iterations);
+                        LOG.warn("Got response <{}>, expecting <{}> iteration=", response.getStatus(), 200, iterations);
                         // allow all ClientLoops to finish
                         success.set(false);
                     }
@@ -225,7 +223,7 @@ public class ProxyServletLoadTest
             }
             catch (Throwable x)
             {
-                LOG.warn("Error processing request "+iterations, x);
+                LOG.warn("Error processing request " + iterations, x);
                 success.set(false);
             }
             finally
