@@ -1,6 +1,6 @@
 //
 //  ========================================================================
-//  Copyright (c) 1995-2017 Mort Bay Consulting Pty. Ltd.
+//  Copyright (c) 1995-2021 Mort Bay Consulting Pty Ltd and others.
 //  ------------------------------------------------------------------------
 //  All rights reserved. This program and the accompanying materials
 //  are made available under the terms of the Eclipse Public License v1.0
@@ -20,6 +20,7 @@ package org.eclipse.jetty.websocket.jsr356;
 
 import java.io.IOException;
 import java.net.URI;
+import java.util.Collection;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Objects;
@@ -28,7 +29,6 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executor;
 import java.util.concurrent.Future;
-
 import javax.websocket.ClientEndpoint;
 import javax.websocket.ClientEndpointConfig;
 import javax.websocket.DeploymentException;
@@ -38,8 +38,10 @@ import javax.websocket.Extension;
 import javax.websocket.Session;
 import javax.websocket.WebSocketContainer;
 
+import org.eclipse.jetty.client.HttpClient;
 import org.eclipse.jetty.io.ByteBufferPool;
 import org.eclipse.jetty.util.DecoratedObjectFactory;
+import org.eclipse.jetty.util.annotation.ManagedObject;
 import org.eclipse.jetty.util.component.ContainerLifeCycle;
 import org.eclipse.jetty.util.log.Log;
 import org.eclipse.jetty.util.log.Logger;
@@ -53,8 +55,8 @@ import org.eclipse.jetty.websocket.client.ClientUpgradeRequest;
 import org.eclipse.jetty.websocket.client.WebSocketClient;
 import org.eclipse.jetty.websocket.client.io.UpgradeListener;
 import org.eclipse.jetty.websocket.common.WebSocketSession;
+import org.eclipse.jetty.websocket.common.WebSocketSessionListener;
 import org.eclipse.jetty.websocket.common.scopes.DelegatedContainerScope;
-import org.eclipse.jetty.websocket.common.scopes.SimpleContainerScope;
 import org.eclipse.jetty.websocket.common.scopes.WebSocketContainerScope;
 import org.eclipse.jetty.websocket.jsr356.annotations.AnnotatedEndpointScanner;
 import org.eclipse.jetty.websocket.jsr356.client.AnnotatedClientEndpointMetadata;
@@ -71,32 +73,56 @@ import org.eclipse.jetty.websocket.jsr356.metadata.EndpointMetadata;
  * <p>
  * This should be specific to a JVM if run in a standalone mode. or specific to a WebAppContext if running on the Jetty server.
  */
+@ManagedObject("JSR356 Client Container")
 public class ClientContainer extends ContainerLifeCycle implements WebSocketContainer, WebSocketContainerScope
 {
     private static final Logger LOG = Log.getLogger(ClientContainer.class);
 
-    /** The delegated Container Scope */
+    /**
+     * The delegated Container Scope
+     */
     private final WebSocketContainerScope scopeDelegate;
-    /** Tracking all primitive decoders for the container */
+    /**
+     * Tracking all primitive decoders for the container
+     */
     private final DecoderFactory decoderFactory;
-    /** Tracking all primitive encoders for the container */
+    /**
+     * Tracking all primitive encoders for the container
+     */
     private final EncoderFactory encoderFactory;
-    /** The jetty websocket client in use for this container */
+    /**
+     * The jetty websocket client in use for this container
+     */
     private final WebSocketClient client;
     private final boolean internalClient;
-    /** Tracking for all declared Client endpoints */
+    /**
+     * Tracking for all declared Client endpoints
+     */
     private final Map<Class<?>, EndpointMetadata> endpointClientMetadataCache;
-    
+
+    private final JsrSessionTracker sessionTracker = new JsrSessionTracker();
+
     /**
      * This is the entry point for {@link javax.websocket.ContainerProvider#getWebSocketContainer()}
      */
     public ClientContainer()
     {
         // This constructor is used with Standalone JSR Client usage.
-        this(new SimpleContainerScope(WebSocketPolicy.newClientPolicy()));
-        client.setDaemon(true);
+        this(new WebSocketClient());
     }
-    
+
+    /**
+     * Create a {@link javax.websocket.WebSocketContainer} using the supplied
+     * {@link HttpClient} for environments where you want to configure
+     * SSL/TLS or Proxy behaviors.
+     *
+     * @param httpClient the HttpClient instance to use
+     */
+    public ClientContainer(final HttpClient httpClient)
+    {
+        this(new WebSocketClient(httpClient));
+    }
+
     /**
      * This is the entry point for ServerContainer, via ServletContext.getAttribute(ServerContainer.class.getName())
      *
@@ -104,8 +130,19 @@ public class ClientContainer extends ContainerLifeCycle implements WebSocketCont
      */
     public ClientContainer(final WebSocketContainerScope scope)
     {
+        this(scope, null);
+    }
+
+    /**
+     * This is the entry point for ServerContainer, via ServletContext.getAttribute(ServerContainer.class.getName())
+     *
+     * @param scope the scope of the ServerContainer
+     * @param httpClient the HttpClient instance to use
+     */
+    protected ClientContainer(final WebSocketContainerScope scope, final HttpClient httpClient)
+    {
         String jsr356TrustAll = System.getProperty("org.eclipse.jetty.websocket.jsr356.ssl-trust-all");
-    
+
         WebSocketContainerScope clientScope;
         if (scope.getPolicy().getBehavior() == WebSocketBehavior.CLIENT)
         {
@@ -116,26 +153,29 @@ public class ClientContainer extends ContainerLifeCycle implements WebSocketCont
             // We need to wrap the scope for the CLIENT Policy behaviors
             clientScope = new DelegatedContainerScope(WebSocketPolicy.newClientPolicy(), scope);
         }
-    
+
         this.scopeDelegate = clientScope;
         this.client = new WebSocketClient(scopeDelegate,
-                new JsrEventDriverFactory(scopeDelegate),
-                new JsrSessionFactory(this));
-        this.internalClient = true;
-        
-        if(jsr356TrustAll != null)
+            new JsrEventDriverFactory(scopeDelegate),
+            new JsrSessionFactory(this),
+            httpClient);
+        this.client.addSessionListener(new JsrSessionListenerBridge(sessionTracker));
+
+        if (jsr356TrustAll != null)
         {
             boolean trustAll = Boolean.parseBoolean(jsr356TrustAll);
             client.getSslContextFactory().setTrustAll(trustAll);
         }
-        
-        this.endpointClientMetadataCache = new ConcurrentHashMap<>();
-        this.decoderFactory = new DecoderFactory(this,PrimitiveDecoderMetadataSet.INSTANCE);
-        this.encoderFactory = new EncoderFactory(this,PrimitiveEncoderMetadataSet.INSTANCE);
 
-        ShutdownThread.register(this);
+        this.internalClient = true;
+
+        this.endpointClientMetadataCache = new ConcurrentHashMap<>();
+        this.decoderFactory = new DecoderFactory(this, PrimitiveDecoderMetadataSet.INSTANCE);
+        this.encoderFactory = new EncoderFactory(this, PrimitiveEncoderMetadataSet.INSTANCE);
+
+        addBean(sessionTracker);
     }
-    
+
     /**
      * Build a ClientContainer with a specific WebSocketClient in mind.
      *
@@ -143,13 +183,20 @@ public class ClientContainer extends ContainerLifeCycle implements WebSocketCont
      */
     public ClientContainer(WebSocketClient client)
     {
+        Objects.requireNonNull(client, "WebSocketClient");
         this.scopeDelegate = client;
         this.client = client;
+        addBean(this.client);
+        this.client.setEventDriverFactory(new JsrEventDriverFactory(scopeDelegate));
+        this.client.setSessionFactory(new JsrSessionFactory(this));
         this.internalClient = false;
-        
+
         this.endpointClientMetadataCache = new ConcurrentHashMap<>();
-        this.decoderFactory = new DecoderFactory(this,PrimitiveDecoderMetadataSet.INSTANCE);
-        this.encoderFactory = new EncoderFactory(this,PrimitiveEncoderMetadataSet.INSTANCE);
+        this.decoderFactory = new DecoderFactory(this, PrimitiveDecoderMetadataSet.INSTANCE);
+        this.encoderFactory = new EncoderFactory(this, PrimitiveEncoderMetadataSet.INSTANCE);
+
+        this.client.addSessionListener(new JsrSessionListenerBridge(sessionTracker));
+        addBean(sessionTracker);
     }
 
     private Session connect(EndpointInstance instance, URI path) throws IOException
@@ -169,14 +216,14 @@ public class ClientContainer extends ContainerLifeCycle implements WebSocketCont
                 }
             }
         }
-        
-        Objects.requireNonNull(instance,"EndpointInstance cannot be null");
-        Objects.requireNonNull(path,"Path cannot be null");
+
+        Objects.requireNonNull(instance, "EndpointInstance cannot be null");
+        Objects.requireNonNull(path, "Path cannot be null");
 
         ClientEndpointConfig config = (ClientEndpointConfig)instance.getConfig();
         ClientUpgradeRequest req = new ClientUpgradeRequest();
         UpgradeListener upgradeListener = null;
-        
+
         for (Extension ext : config.getExtensions())
         {
             req.addExtensions(new JsrExtensionConfig(ext));
@@ -192,14 +239,14 @@ public class ClientContainer extends ContainerLifeCycle implements WebSocketCont
             upgradeListener = new JsrUpgradeListener(config.getConfigurator());
         }
 
-        Future<org.eclipse.jetty.websocket.api.Session> futSess = client.connect(instance,path,req,upgradeListener);
+        Future<org.eclipse.jetty.websocket.api.Session> futSess = client.connect(instance, path, req, upgradeListener);
         try
         {
             return (JsrSession)futSess.get();
         }
         catch (InterruptedException e)
         {
-            throw new IOException("Connect failure",e);
+            throw new IOException("Connect failure", e);
         }
         catch (ExecutionException e)
         {
@@ -213,7 +260,7 @@ public class ClientContainer extends ContainerLifeCycle implements WebSocketCont
             }
             else
             {
-                throw new IOException("Connect failure",cause);
+                throw new IOException("Connect failure", cause);
             }
         }
     }
@@ -221,36 +268,36 @@ public class ClientContainer extends ContainerLifeCycle implements WebSocketCont
     @Override
     public Session connectToServer(Class<? extends Endpoint> endpointClass, ClientEndpointConfig config, URI path) throws DeploymentException, IOException
     {
-        EndpointInstance instance = newClientEndpointInstance(endpointClass,config);
-        return connect(instance,path);
+        EndpointInstance instance = newClientEndpointInstance(endpointClass, config);
+        return connect(instance, path);
     }
 
     @Override
     public Session connectToServer(Class<?> annotatedEndpointClass, URI path) throws DeploymentException, IOException
     {
-        EndpointInstance instance = newClientEndpointInstance(annotatedEndpointClass,null);
-        return connect(instance,path);
+        EndpointInstance instance = newClientEndpointInstance(annotatedEndpointClass, null);
+        return connect(instance, path);
     }
 
     @Override
     public Session connectToServer(Endpoint endpoint, ClientEndpointConfig config, URI path) throws DeploymentException, IOException
     {
-        EndpointInstance instance = newClientEndpointInstance(endpoint,config);
-        return connect(instance,path);
+        EndpointInstance instance = newClientEndpointInstance(endpoint, config);
+        return connect(instance, path);
     }
 
     @Override
     public Session connectToServer(Object endpoint, URI path) throws DeploymentException, IOException
     {
-        EndpointInstance instance = newClientEndpointInstance(endpoint,null);
-        return connect(instance,path);
+        EndpointInstance instance = newClientEndpointInstance(endpoint, null);
+        return connect(instance, path);
     }
 
     @Override
     protected void doStart() throws Exception
     {
         super.doStart();
-        
+
         // Initialize the default decoder / encoder factories
         EmptyClientEndpointConfig empty = new EmptyClientEndpointConfig();
         this.decoderFactory.init(empty);
@@ -261,6 +308,8 @@ public class ClientContainer extends ContainerLifeCycle implements WebSocketCont
     protected void doStop() throws Exception
     {
         ShutdownThread.deregister(this);
+        this.encoderFactory.destroy();
+        this.decoderFactory.destroy();
         endpointClientMetadataCache.clear();
         super.doStop();
     }
@@ -274,6 +323,12 @@ public class ClientContainer extends ContainerLifeCycle implements WebSocketCont
     public WebSocketClient getClient()
     {
         return client;
+    }
+
+    @Override
+    public ClassLoader getClassLoader()
+    {
+        return client.getClassLoader();
     }
 
     public EndpointMetadata getClientEndpointMetadata(Class<?> endpoint, EndpointConfig config)
@@ -291,7 +346,7 @@ public class ClientContainer extends ContainerLifeCycle implements WebSocketCont
             if (anno != null)
             {
                 // Annotated takes precedence here
-                AnnotatedClientEndpointMetadata annoMetadata = new AnnotatedClientEndpointMetadata(this,endpoint);
+                AnnotatedClientEndpointMetadata annoMetadata = new AnnotatedClientEndpointMetadata(this, endpoint);
                 AnnotatedEndpointScanner<ClientEndpoint, ClientEndpointConfig> scanner = new AnnotatedEndpointScanner<>(annoMetadata);
                 scanner.scan();
                 metadata = annoMetadata;
@@ -301,7 +356,7 @@ public class ClientContainer extends ContainerLifeCycle implements WebSocketCont
                 // extends Endpoint
                 @SuppressWarnings("unchecked")
                 Class<? extends Endpoint> eendpoint = (Class<? extends Endpoint>)endpoint;
-                metadata = new SimpleEndpointMetadata(eendpoint,config);
+                metadata = new SimpleEndpointMetadata(eendpoint, config);
             }
             else
             {
@@ -313,7 +368,7 @@ public class ClientContainer extends ContainerLifeCycle implements WebSocketCont
                 throw new InvalidWebSocketException(err.toString());
             }
 
-            endpointClientMetadataCache.put(endpoint,metadata);
+            endpointClientMetadataCache.put(endpoint, metadata);
             return metadata;
         }
     }
@@ -380,17 +435,18 @@ public class ClientContainer extends ContainerLifeCycle implements WebSocketCont
 
     /**
      * Used in {@link Session#getOpenSessions()}
+     *
      * @return the set of open sessions
      */
     public Set<Session> getOpenSessions()
     {
-        return new HashSet<>(getBeans(Session.class));
+        return this.sessionTracker.getSessions();
     }
 
     @Override
     public WebSocketPolicy getPolicy()
     {
-        return scopeDelegate.getPolicy();
+        return client.getPolicy();
     }
 
     @Override
@@ -399,21 +455,39 @@ public class ClientContainer extends ContainerLifeCycle implements WebSocketCont
         return scopeDelegate.getSslContextFactory();
     }
 
+    @Override
+    public void addSessionListener(WebSocketSessionListener listener)
+    {
+        client.addSessionListener(listener);
+    }
+
+    @Override
+    public void removeSessionListener(WebSocketSessionListener listener)
+    {
+        client.removeSessionListener(listener);
+    }
+
+    @Override
+    public Collection<WebSocketSessionListener> getSessionListeners()
+    {
+        return client.getSessionListeners();
+    }
+
     private EndpointInstance newClientEndpointInstance(Class<?> endpointClass, ClientEndpointConfig config)
     {
         try
         {
-            return newClientEndpointInstance(endpointClass.newInstance(),config);
+            return newClientEndpointInstance(endpointClass.getDeclaredConstructor().newInstance(), config);
         }
-        catch (InstantiationException | IllegalAccessException e)
+        catch (Exception e)
         {
-            throw new InvalidWebSocketException("Unable to instantiate websocket: " + endpointClass.getClass());
+            throw new InvalidWebSocketException("Unable to instantiate websocket: " + endpointClass.getClass(), e);
         }
     }
 
     public EndpointInstance newClientEndpointInstance(Object endpoint, ClientEndpointConfig config)
     {
-        EndpointMetadata metadata = getClientEndpointMetadata(endpoint.getClass(),config);
+        EndpointMetadata metadata = getClientEndpointMetadata(endpoint.getClass(), config);
         ClientEndpointConfig cec = config;
         if (config == null)
         {
@@ -426,35 +500,7 @@ public class ClientContainer extends ContainerLifeCycle implements WebSocketCont
                 cec = new EmptyClientEndpointConfig();
             }
         }
-        return new EndpointInstance(endpoint,cec,metadata);
-    }
-
-    @Override
-    public void onSessionClosed(WebSocketSession session)
-    {
-        if (session instanceof Session)
-        {
-            removeBean(session);
-        }
-        else
-        {
-            LOG.warn("JSR356 Implementation should not be mixed with native implementation: Expected {} to implement {}",session.getClass().getName(),
-                    Session.class.getName());
-        }
-    }
-
-    @Override
-    public void onSessionOpened(WebSocketSession session)
-    {
-        if (session instanceof Session)
-        {
-            addManaged(session);
-        }
-        else
-        {
-            LOG.warn("JSR356 Implementation should not be mixed with native implementation: Expected {} to implement {}",session.getClass().getName(),
-                    Session.class.getName());
-        }
+        return new EndpointInstance(endpoint, cec, metadata);
     }
 
     @Override
@@ -466,10 +512,11 @@ public class ClientContainer extends ContainerLifeCycle implements WebSocketCont
     @Override
     public void setDefaultMaxBinaryMessageBufferSize(int max)
     {
-        // overall message limit (used in non-streaming)
-        client.getPolicy().setMaxBinaryMessageSize(max);
         // incoming streaming buffer size
         client.setMaxBinaryMessageBufferSize(max);
+
+        // bump overall message limit (used in non-streaming)
+        client.getPolicy().setMaxBinaryMessageSize(max);
     }
 
     @Override
@@ -481,9 +528,38 @@ public class ClientContainer extends ContainerLifeCycle implements WebSocketCont
     @Override
     public void setDefaultMaxTextMessageBufferSize(int max)
     {
-        // overall message limit (used in non-streaming)
-        client.getPolicy().setMaxTextMessageSize(max);
         // incoming streaming buffer size
         client.setMaxTextMessageBufferSize(max);
+
+        // bump overall message limit (used in non-streaming)
+        client.getPolicy().setMaxTextMessageSize(max);
+    }
+
+    private static class JsrSessionListenerBridge implements WebSocketSessionListener
+    {
+        private final JsrSessionListener listener;
+
+        public JsrSessionListenerBridge(JsrSessionListener listener)
+        {
+            this.listener = listener;
+        }
+
+        @Override
+        public void onSessionOpened(WebSocketSession session)
+        {
+            if (session instanceof JsrSession)
+            {
+                this.listener.onSessionOpened((JsrSession)session);
+            }
+        }
+
+        @Override
+        public void onSessionClosed(WebSocketSession session)
+        {
+            if (session instanceof JsrSession)
+            {
+                this.listener.onSessionClosed((JsrSession)session);
+            }
+        }
     }
 }
