@@ -1,6 +1,6 @@
 //
 //  ========================================================================
-//  Copyright (c) 1995-2017 Mort Bay Consulting Pty. Ltd.
+//  Copyright (c) 1995-2021 Mort Bay Consulting Pty Ltd and others.
 //  ------------------------------------------------------------------------
 //  All rights reserved. This program and the accompanying materials
 //  are made available under the terms of the Eclipse Public License v1.0
@@ -18,9 +18,7 @@
 
 package org.eclipse.jetty.websocket.server;
 
-import java.io.IOException;
 import java.util.Iterator;
-
 import javax.servlet.ServletContext;
 
 import org.eclipse.jetty.http.pathmap.MappedResource;
@@ -30,7 +28,6 @@ import org.eclipse.jetty.http.pathmap.RegexPathSpec;
 import org.eclipse.jetty.http.pathmap.ServletPathSpec;
 import org.eclipse.jetty.http.pathmap.UriTemplatePathSpec;
 import org.eclipse.jetty.util.component.ContainerLifeCycle;
-import org.eclipse.jetty.util.component.Dumpable;
 import org.eclipse.jetty.websocket.api.WebSocketException;
 import org.eclipse.jetty.websocket.api.WebSocketPolicy;
 import org.eclipse.jetty.websocket.servlet.ServletUpgradeRequest;
@@ -43,42 +40,30 @@ import org.eclipse.jetty.websocket.servlet.WebSocketCreator;
  * Only applicable if using {@link WebSocketUpgradeFilter}
  * </p>
  */
-public class NativeWebSocketConfiguration extends ContainerLifeCycle implements MappedWebSocketCreator, Dumpable
+public class NativeWebSocketConfiguration extends ContainerLifeCycle implements MappedWebSocketCreator
 {
     private final WebSocketServerFactory factory;
     private final PathMappings<WebSocketCreator> mappings = new PathMappings<>();
-    
+
     public NativeWebSocketConfiguration(ServletContext context)
     {
         this(new WebSocketServerFactory(context));
     }
-    
+
     public NativeWebSocketConfiguration(WebSocketServerFactory webSocketServerFactory)
     {
         this.factory = webSocketServerFactory;
         addBean(this.factory);
+        addBean(this.mappings);
     }
-    
+
     @Override
     public void doStop() throws Exception
     {
         mappings.removeIf((mapped) -> !(mapped.getResource() instanceof PersistedWebSocketCreator));
         super.doStop();
     }
-    
-    @Override
-    public String dump()
-    {
-        return ContainerLifeCycle.dump(this);
-    }
-    
-    @Override
-    public void dump(Appendable out, String indent) throws IOException
-    {
-        // TODO: show factory/mappings ?
-        mappings.dump(out, indent);
-    }
-    
+
     /**
      * Get WebSocketServerFactory being used.
      *
@@ -88,7 +73,7 @@ public class NativeWebSocketConfiguration extends ContainerLifeCycle implements 
     {
         return this.factory;
     }
-    
+
     /**
      * Get the matching {@link MappedResource} for the provided target.
      *
@@ -99,7 +84,7 @@ public class NativeWebSocketConfiguration extends ContainerLifeCycle implements 
     {
         return this.mappings.getMatch(target);
     }
-    
+
     /**
      * Used to configure the Default {@link WebSocketPolicy} used by all endpoints that
      * don't redeclare the values.
@@ -110,18 +95,19 @@ public class NativeWebSocketConfiguration extends ContainerLifeCycle implements 
     {
         return this.factory.getPolicy();
     }
-    
+
     /**
      * Manually add a WebSocket mapping.
      * <p>
-     *     If mapping is added before this configuration is started, then it is persisted through
-     *     stop/start of this configuration's lifecycle.  Otherwise it will be removed when
-     *     this configuration is stopped.
+     * If mapping is added before this configuration is started, then it is persisted through
+     * stop/start of this configuration's lifecycle.  Otherwise it will be removed when
+     * this configuration is stopped.
      * </p>
      *
      * @param pathSpec the pathspec to respond on
      * @param creator the websocket creator to activate on the provided mapping.
      */
+    @Override
     public void addMapping(PathSpec pathSpec, WebSocketCreator creator)
     {
         WebSocketCreator wsCreator = creator;
@@ -131,7 +117,7 @@ public class NativeWebSocketConfiguration extends ContainerLifeCycle implements 
         }
         mappings.put(pathSpec, wsCreator);
     }
-    
+
     /**
      * Manually add a WebSocket mapping.
      *
@@ -155,7 +141,7 @@ public class NativeWebSocketConfiguration extends ContainerLifeCycle implements 
             throw new RuntimeException("Unsupported (Deprecated) PathSpec implementation type: " + spec.getClass().getName());
         }
     }
-    
+
     /**
      * Manually add a WebSocket mapping.
      *
@@ -170,15 +156,14 @@ public class NativeWebSocketConfiguration extends ContainerLifeCycle implements 
         {
             try
             {
-                return endpointClass.newInstance();
+                return endpointClass.getDeclaredConstructor().newInstance();
             }
-            catch (InstantiationException | IllegalAccessException e)
+            catch (Exception e)
             {
                 throw new WebSocketException("Unable to create instance of " + endpointClass.getName(), e);
             }
         });
     }
-    
 
     @Override
     public void addMapping(String rawspec, WebSocketCreator creator)
@@ -255,18 +240,18 @@ public class NativeWebSocketConfiguration extends ContainerLifeCycle implements 
     private class PersistedWebSocketCreator implements WebSocketCreator
     {
         private final WebSocketCreator delegate;
-        
+
         public PersistedWebSocketCreator(WebSocketCreator delegate)
         {
             this.delegate = delegate;
         }
-        
+
         @Override
         public Object createWebSocket(ServletUpgradeRequest req, ServletUpgradeResponse resp)
         {
             return delegate.createWebSocket(req, resp);
         }
-    
+
         @Override
         public String toString()
         {
